2026-10-29/1-FHIR-For-Services/deploy/k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: track2
